--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <nav class="navbar navbar-expand-sm navbar-light bg-light">
       <a class="navbar-brand" href="index.html">
         <img src="assets/logo.jpg" width="30" height="30" class="d-inline-block align-top" alt="CoinPrice" loading="lazy">
-        CoinPrice
+        TradingK.com - Coin Market
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
