--- a/index.html
+++ b/index.html
@@ -18,6 +18,17 @@
     <script src="assets/script/accounting.min.js"></script>
     <script src="assets/script/mylib.js"></script>
     <script src="assets/script/coinspider.js"></script>
+    
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-FL9Q7FBMTX"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-FL9Q7FBMTX');
+</script>
+    
   </head>
   <body>
     <!-- logo & nav bar -->
