--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ var userLang = navigator.language || navigator.userLanguage;
         },
         zh:
         {
-          webtitle:"老K,tradingk.com",
+          webtitle:"TradingK,比特币加密货币交易实时行情，以及钱包使用,tradingk.com",
           logoTitle:"老K",
           Exchanges:"交易所",
           Cryptocurrencies:"加密货币",
